fixed misaligned images.

--- a/styles.css
+++ b/styles.css
@@ -434,6 +434,7 @@ nav ul li a:hover::after {
 
 .work img {
     width: 100%;
+    height: 100%;
     border-radius: 10px;
     display: block;
     transition: transform 0.3s;
